# Hydraulic-Analysis

./: DEPLOYMENT.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  dockerfile
configs/: economics_config.yaml  fluid_config.yaml  pipe_config.yaml  scenario_config.yaml
docs/: design.md  user_guide.md
hydraulic_analysis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
notebooks/: compare_pipes.ipynb  exergy_analysis.ipynb  network_and_transients.ipynb  predictive_maintenance.ipynb  uncertainty.ipynb  vfd_energy_optimization.ipynb
src/: __init__.py  db.py
src/audit/: models.py  service.py
src/auth/: models.py  service.py
src/economics/: lcca.py  scenario_economics.py
src/geospatial/: map_view.py  models.py  service.py
src/hydraulics/: electrical.py  fluid_properties.py  friction.py  head_loss.py  network.py  npsh.py  pipe_design.py  pump.py  swamee_jain.py  transients.py
src/machine_learning/: anomaly_detection.py  degradation_model.py  iso14224.py  synthetic_data.py
src/plots/: pareto.py  plot_efficiency.py  plot_pressure.py  sankey.py
src/reporting/: build_report.py  figures.py
src/simulation/: config_loader.py  monte_carlo.py  scenario.py  sensitivity.py
src/utils/: constants.py  units.py  validation.py  yaml_diff.py
streamlit_app/: Dockerfile  app.py  auth_helpers.py
streamlit_app/pages/: 10_pipe_design.py  1_input.py  2_compare.py  3_results.py  4_lean_dashboard.py  5_economics.py  6_about.py  6_network_map.py  7_config_editor.py  8_audit_log.py  9_about.py
tests/: conftest.py  test_anomaly_detection.py  test_audit.py  test_auth.py  test_config_loader.py  test_degradation_model.py  test_economics.py  test_electrical.py  test_fluid_properties.py  test_friction.py  test_geospatial.py  test_iso14224.py  test_network.py  test_npsh.py  test_pareto.py  test_pipe_design.py  test_pump.py  test_reporting.py  test_scenario.py  test_streamlit_rbac.py  test_synthetic_data.py  test_transients.py  test_validation.py  test_yaml_diff.py
