[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hydraulic-analysis"
version = "0.1.0"
description = "Modular Darcy-Weisbach / Swamee-Jain hydraulic distribution analysis toolkit with Monte Carlo sensitivity, exergy analysis, and a Streamlit dashboard."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Ahmad Bara Wirayudha" }
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "plotly>=5.18",
    "pint>=0.22",
    "pyyaml>=6.0",
    "reportlab>=4.0",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dashboard = ["streamlit>=1.32"]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py310"
